--- a/nginx/default.https.conf.template
+++ b/nginx/default.https.conf.template
@@ -1,45 +1,41 @@
-# HTTP only — issue/renew certificates
+docker compose exec nginx sh -lc "cat >/etc/nginx/conf.d/default.conf <<'CONF'
+# 80: ACME만 예외, 나머지는 HTTPS로 리다이렉트
 server {
-    listen 80;
-    server_name ${DOMAIN};
+    listen 80 default_server;
+    server_name yunttai.mjsec.kr;
 
-    # Let's Encrypt web-root
-    location ^~ /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        allow all;
-    }
-}
-
-# 1) HTTP → HTTPS 리다이렉트 + ACME
-server {
-    listen 80;
-    server_name $DOMAIN;
-
+    # Let's Encrypt HTTP-01
     location ^~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
         allow all;
     }
 
+    # 그 외 요청은 HTTPS로
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
-# 2) HTTPS 서비스
+# 443: 실제 앱 프록시
 server {
-    listen 443 ssl;
-    server_name $DOMAIN;
+    listen 443 ssl http2;
+    server_name yunttai.mjsec.kr;
 
-    ssl_certificate     /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/yunttai.mjsec.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/yunttai.mjsec.kr/privkey.pem;
     include             /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam         /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://web:5000;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://web:5000;  # 반드시 web:5000
+        proxy_http_version 1.1;
+        proxy_set_header Connection \"\";
+        proxy_set_header Host              \$host;
+        proxy_set_header X-Real-IP         \$remote_addr;
+        proxy_set_header X-Forwarded-For   \$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto \$scheme;
+        proxy_read_timeout 120s;
     }
 }
+CONF
+nginx -s reload"
