--- a/nginx/default.https.conf.template
+++ b/nginx/default.https.conf.template
@@ -1,4 +1,3 @@
-docker compose exec nginx sh -lc "cat >/etc/nginx/conf.d/default.conf <<'CONF'
 # 80: ACME만 예외, 나머지는 HTTPS로 리다이렉트
 server {
     listen 80 default_server;
@@ -29,13 +28,11 @@ server {
     location / {
         proxy_pass http://web:5000;  # 반드시 web:5000
         proxy_http_version 1.1;
-        proxy_set_header Connection \"\";
-        proxy_set_header Host              \$host;
-        proxy_set_header X-Real-IP         \$remote_addr;
-        proxy_set_header X-Forwarded-For   \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto \$scheme;
+        proxy_set_header Connection "";
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 120s;
     }
 }
-CONF
-nginx -s reload"
