--- a/nginx/default.https.conf.template
+++ b/nginx/default.https.conf.template
@@ -19,6 +19,7 @@ server {
 server {
     listen 443 ssl http2;
     server_name yunttai.mjsec.kr;
+    client_max_body_size 25m;
 
     ssl_certificate     /etc/letsencrypt/live/yunttai.mjsec.kr/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/yunttai.mjsec.kr/privkey.pem;
